--- a/CHECK.html
+++ b/CHECK.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
 </head>
 
 <body>
@@ -41,6 +43,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Förderplan" src="img/Förderplan.png">
+
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Aktion</a></li>
@@ -50,8 +53,10 @@
                             <li><a href="#">Abgetrennter Link</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Noch ein abgetrennter Link</a></li>
+
                         </ul>
                     </li>
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Erreicht" src="img/Erreicht.png">
@@ -123,11 +128,34 @@
                         </ul>
                     </li>
                 </ul>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
     </nav>
+    <div class="container">
+        <div class="starter-template">
+            <h1>CHECK</h1>
+            <div class="col-md-6">
+                <form>
+                    <div class="form-group">
+                        <!--/.BenutzernameÜberschrift... <label for="beispielFeldEmail1">Username</label> -->
+                        <input type="email" class="form-control" id="beispielFeldEmail1" placeholder="Benutzername">
+                    </div>
+                    <div class="form-group">
+                        <!--/.PasswortÜberschrift...  <label for="beispielFeldPasswort1">Passwort</label>-->
+                        <input type="password" class="form-control" id="beispielFeldPasswort1" placeholder="Passwort">
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-default">LOS!</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
