:dolphin: Changed: CHECK.html, Dropdown - Seda, Fritz, Vivian

--- a/CHECK.html
+++ b/CHECK.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="check.css">
 </head>
 
 <body>
@@ -29,13 +30,41 @@
                             <img alt="Kompetenzen" src="img/Kompetenzen.png">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Aktion</a></li>
-                            <li><a href="#">Andere Aktion</a></li>
-                            <li><a href="#">Irgendwas anderes</a></li>
+                            <li>
+                                <a href="#"><img alt="Kompetenzen" src="img/Kompetenzen.png">CHECK! KOMPETENZENLISTE</a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Abgetrennter Link</a></li>
+                            <li><a href="#">DAS BIN ICH</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Noch ein abgetrennter Link</a></li>
+                            <li><a href="#">ICH UND DIE ANDEREN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">DIE WELT UM MICH HERUM</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">ICH WERDE SELBSTSTÄNDIG</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">SICH BEWEGEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">LERNEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">ARBEITEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">GESTALTEN UND ERSCHAFFEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">SPRECHEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">FREMDSPRACHE</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">LESEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">SCHREIBEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">MESSEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">LÖSUNGEN FINDEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">ZÄHLEN UND RECHNEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">FORM UND RAUM ENTDECKEN</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -43,13 +72,15 @@
                             <img alt="Förderplan" src="img/Förderplan.png">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Aktion</a></li>
-                            <li><a href="#">Andere Aktion</a></li>
-                            <li><a href="#">Irgendwas anderes</a></li>
+                            <li>
+                                <a href="#"><img alt="Förderplan" src="img/Förderplan.png"></a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Abgetrennter Link</a></li>
+                            <li><a href="#">MATHE ZR BIS 10</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Noch ein abgetrennter Link</a></li>
+                            <li><a href="#">DEUTSCH SATZANFÄNGE</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">SACHKUNDE "DER WALD"</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -57,13 +88,43 @@
                             <img alt="Erreicht" src="img/Erreicht.png">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Aktion</a></li>
-                            <li><a href="#">Andere Aktion</a></li>
-                            <li><a href="#">Irgendwas anderes</a></li>
+                            <li>
+                                <a href="#"><img alt="Erreicht" src="img/Erreicht.png">DAS KANN ICH!</a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Abgetrennter Link</a></li>
+                            <li><a href="#">ALLE KOMPETENZEN!</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Noch ein abgetrennter Link</a></li>
+                            <li><a href="#">DAS BIN ICH</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">ICH UND DIE ANDEREN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">DIE WELT UM MICH HERUM</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">ICH WERDE SELBSTSTÄNDIG</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">SICH BEWEGEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">LERNEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">ARBEITEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">GESTALTEN UND ERSCHAFFEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">SPRECHEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">FREMDSPRACHE</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">LESEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">SCHREIBEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">MESSEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">LÖSUNGEN FINDEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">ZÄHLEN UND RECHNEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">FORM UND RAUM ENTDECKEN</a></li>
                         </ul>
                     </li>
 
@@ -74,52 +135,61 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Profil" src="img/Profil.png"></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Aktion</a></li>
-                            <li><a href="#">Andere Aktion</a></li>
-                            <li><a href="#">Irgendwas anderes</a></li>
+                            <li>
+                                <a href="#"><img alt="Profil" src="img/Profil.png"></a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Abgetrennter Link</a></li>
+                            <li><a href="#">MEIN PROFIL ÄNDERN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">MEIN PASSWORT ÄNDERN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">MEIN PROFIL LÖSCHEN</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Schule" src="img/Schule.png"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Aktion</a></li>
-                            <li><a href="#">Andere Aktion</a></li>
-                            <li><a href="#">Irgendwas anderes</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Abgetrennter Link</a></li>
+                            <li>
+                                <a href="#"><img alt="Schule" src="img/Schule.png"></a>
+                            </li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Klasse" src="img/Klasse.png"></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Aktion</a></li>
-                            <li><a href="#">Andere Aktion</a></li>
-                            <li><a href="#">Irgendwas anderes</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Abgetrennter Link</a></li>
+                            <li>
+                                <a href="#"><img alt="Klasse" src="img/Klasse.png"></a>
+                            </li>
+
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Fragen" src="img/Fragen.png"></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Aktion</a></li>
-                            <li><a href="#">Andere Aktion</a></li>
-                            <li><a href="#">Irgendwas anderes</a></li>
+                            <li>
+                                <a href="#"><img alt="Fragen" src="img/Fragen.png">BRAUCHST DU HILFE?</a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Abgetrennter Link</a></li>
+                            <li><a href="#">SO GEHT'S!</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">VIDEO-TUTORIALS</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">HÄUFIG GESTELLTE FRAGEN</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">KONTAKT</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Exit" src="img/Exit.png"></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Aktion</a></li>
-                            <li><a href="#">Andere Aktion</a></li>
-                            <li><a href="#">Irgendwas anderes</a></li>
+                            <li>
+                                <a href="#"><img alt="Exit" src="img/Exit.png">MÖCHTEST DU CHECK! VERLASSEN?</a>
+                            </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Abgetrennter Link</a></li>
+                            <li><a href="#">JA</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">NEIN</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -128,6 +198,27 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+</body>
+
+</html>
+<!-- /.container-fluid -->
+</nav>
+</body>
+
+</html>
+</ul>
+</li>
+</ul>
+</div>
+<!-- /.navbar-collapse -->
+</div>
+<!-- /.container-fluid -->
+</nav>
+</body>
+
+</html>
+<!-- /.container-fluid -->
+</nav>
 </body>
 
 </html>
