:dolphin: Added: check.css, Changed: CHECK.html, Farben - Fritz, Seda, Vivian

--- a/CHECK.html
+++ b/CHECK.html
@@ -29,7 +29,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Kompetenzen" src="img/Kompetenzen.png">
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu" id="Kompetenzen">
                             <li>
                                 <a href="#"><img alt="Kompetenzen" src="img/Kompetenzen.png">CHECK! KOMPETENZENLISTE</a>
                             </li>
@@ -71,7 +71,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Förderplan" src="img/Förderplan.png">
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu" id="Förderplan">
                             <li>
                                 <a href="#"><img alt="Förderplan" src="img/Förderplan.png"></a>
                             </li>
@@ -87,7 +87,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Erreicht" src="img/Erreicht.png">
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu" id="Erreicht">
                             <li>
                                 <a href="#"><img alt="Erreicht" src="img/Erreicht.png">DAS KANN ICH!</a>
                             </li>
@@ -133,8 +133,9 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Profil" src="img/Profil.png"></a>
-                        <ul class="dropdown-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <img alt="Profil" src="img/Profil.png"></a>
+                        <ul class="dropdown-menu" id="Profil">
                             <li>
                                 <a href="#"><img alt="Profil" src="img/Profil.png"></a>
                             </li>
@@ -147,17 +148,19 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Schule" src="img/Schule.png"></span>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <img alt="Schule" src="img/Schule.png"></span>
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu" id="Schule">
                             <li>
                                 <a href="#"><img alt="Schule" src="img/Schule.png"></a>
                             </li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Klasse" src="img/Klasse.png"></a>
-                        <ul class="dropdown-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <img alt="Klasse" src="img/Klasse.png"></a>
+                        <ul class="dropdown-menu" id="Klasse">
                             <li>
                                 <a href="#"><img alt="Klasse" src="img/Klasse.png"></a>
                             </li>
@@ -165,8 +168,9 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Fragen" src="img/Fragen.png"></a>
-                        <ul class="dropdown-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <img alt="Fragen" src="img/Fragen.png"></a>
+                        <ul class="dropdown-menu" id="Fragen">
                             <li>
                                 <a href="#"><img alt="Fragen" src="img/Fragen.png">BRAUCHST DU HILFE?</a>
                             </li>
@@ -181,8 +185,9 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img alt="Exit" src="img/Exit.png"></a>
-                        <ul class="dropdown-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <img alt="Exit" src="img/Exit.png"></a>
+                        <ul class="dropdown-menu" id="Exit">
                             <li>
                                 <a href="#"><img alt="Exit" src="img/Exit.png">MÖCHTEST DU CHECK! VERLASSEN?</a>
                             </li>
