:dolphin: Changed: CHECK.html u. check.css, id umbenannt, Farbe geändert und eine Scrollbar hinzugefügt - Vivian

--- a/CHECK.html
+++ b/CHECK.html
@@ -71,7 +71,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Förderplan" src="img/Förderplan.png">
                         </a>
-                        <ul class="dropdown-menu" id="Förderplan">
+                        <ul class="dropdown-menu" id="Forderplan">
                             <li>
                                 <a href="#"><img alt="Förderplan" src="img/Förderplan.png"></a>
                             </li>
