--- a/CHECK.html
+++ b/CHECK.html
@@ -30,41 +30,41 @@
                             <img alt="Kompetenzen" src="img/Kompetenzen.png">
                         </a>
                         <ul class="dropdown-menu" id="Kompetenzen">
-                            <li>
+                            <li class="liste">
                                 <a href="#"><img alt="Kompetenzen" src="img/Kompetenzen.png">CHECK! KOMPETENZENLISTE</a>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">DAS BIN ICH</a></li>
+                            <li class="liste"><a href="#">DAS BIN ICH</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ICH UND DIE ANDEREN</a></li>
+                            <li class="liste"><a href="#">ICH UND DIE ANDEREN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">DIE WELT UM MICH HERUM</a></li>
+                            <li class="liste"><a href="#">DIE WELT UM MICH HERUM</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ICH WERDE SELBSTSTÄNDIG</a></li>
+                            <li class="liste"><a href="#">ICH WERDE SELBSTSTÄNDIG</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SICH BEWEGEN</a></li>
+                            <li class="liste"><a href="#">SICH BEWEGEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">LERNEN</a></li>
+                            <li class="liste"><a href="#">LERNEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ARBEITEN</a></li>
+                            <li class="liste"><a href="#">ARBEITEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">GESTALTEN UND ERSCHAFFEN</a></li>
+                            <li class="liste"><a href="#">GESTALTEN UND ERSCHAFFEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SPRECHEN</a></li>
+                            <li class="liste"><a href="#">SPRECHEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">FREMDSPRACHE</a></li>
+                            <li class="liste"><a href="#">FREMDSPRACHE</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">LESEN</a></li>
+                            <li class="liste"><a href="#">LESEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SCHREIBEN</a></li>
+                            <li class="liste"><a href="#">SCHREIBEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">MESSEN</a></li>
+                            <li class="liste"><a href="#">MESSEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">LÖSUNGEN FINDEN</a></li>
+                            <li class="liste"><a href="#">LÖSUNGEN FINDEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ZÄHLEN UND RECHNEN</a></li>
+                            <li class="liste"><a href="#">ZÄHLEN UND RECHNEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">FORM UND RAUM ENTDECKEN</a></li>
+                            <li class="liste"><a href="#">FORM UND RAUM ENTDECKEN</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -72,15 +72,15 @@
                             <img alt="Förderplan" src="img/Förderplan.png">
                         </a>
                         <ul class="dropdown-menu" id="Forderplan">
-                            <li>
+                            <li class="liste">
                                 <a href="#"><img alt="Förderplan" src="img/Förderplan.png"></a>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">MATHE ZR BIS 10</a></li>
+                            <li class="liste"><a href="#">MATHE ZR BIS 10</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">DEUTSCH SATZANFÄNGE</a></li>
+                            <li class="liste"><a href="#">DEUTSCH SATZANFÄNGE</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SACHKUNDE "DER WALD"</a></li>
+                            <li class="liste"><a href="#">SACHKUNDE "DER WALD"</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -88,43 +88,43 @@
                             <img alt="Erreicht" src="img/Erreicht.png">
                         </a>
                         <ul class="dropdown-menu" id="Erreicht">
-                            <li>
+                            <li class="liste">
                                 <a href="#"><img alt="Erreicht" src="img/Erreicht.png">DAS KANN ICH!</a>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ALLE KOMPETENZEN!</a></li>
+                            <li class="liste"><a href="#">ALLE KOMPETENZEN!</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">DAS BIN ICH</a></li>
+                            <li class="liste"><a href="#">DAS BIN ICH</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ICH UND DIE ANDEREN</a></li>
+                            <li class="liste"><a href="#">ICH UND DIE ANDEREN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">DIE WELT UM MICH HERUM</a></li>
+                            <li class="liste"><a href="#">DIE WELT UM MICH HERUM</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ICH WERDE SELBSTSTÄNDIG</a></li>
+                            <li class="liste"><a href="#">ICH WERDE SELBSTSTÄNDIG</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SICH BEWEGEN</a></li>
+                            <li class="liste"><a href="#">SICH BEWEGEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">LERNEN</a></li>
+                            <li class="liste"><a href="#">LERNEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ARBEITEN</a></li>
+                            <li class="liste"><a href="#">ARBEITEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">GESTALTEN UND ERSCHAFFEN</a></li>
+                            <li class="liste"><a href="#">GESTALTEN UND ERSCHAFFEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SPRECHEN</a></li>
+                            <li class="liste"><a href="#">SPRECHEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">FREMDSPRACHE</a></li>
+                            <li class="liste"><a href="#">FREMDSPRACHE</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">LESEN</a></li>
+                            <li class="liste"><a href="#">LESEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SCHREIBEN</a></li>
+                            <li class="liste"><a href="#">SCHREIBEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">MESSEN</a></li>
+                            <li class="liste"><a href="#">MESSEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">LÖSUNGEN FINDEN</a></li>
+                            <li class="liste"><a href="#">LÖSUNGEN FINDEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">ZÄHLEN UND RECHNEN</a></li>
+                            <li class="liste"><a href="#">ZÄHLEN UND RECHNEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">FORM UND RAUM ENTDECKEN</a></li>
+                            <li class="liste"><a href="#">FORM UND RAUM ENTDECKEN</a></li>
                         </ul>
                     </li>
 
@@ -136,15 +136,15 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Profil" src="img/Profil.png"></a>
                         <ul class="dropdown-menu" id="Profil">
-                            <li>
+                            <li class="liste">
                                 <a href="#"><img alt="Profil" src="img/Profil.png"></a>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">MEIN PROFIL ÄNDERN</a></li>
+                            <li class="liste"><a href="#">MEIN PROFIL ÄNDERN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">MEIN PASSWORT ÄNDERN</a></li>
+                            <li class="liste"><a href="#">MEIN PASSWORT ÄNDERN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">MEIN PROFIL LÖSCHEN</a></li>
+                            <li class="liste"><a href="#">MEIN PROFIL LÖSCHEN</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -152,7 +152,7 @@
                             <img alt="Schule" src="img/Schule.png"></span>
                         </a>
                         <ul class="dropdown-menu" id="Schule">
-                            <li>
+                            <li class="liste">
                                 <a href="#"><img alt="Schule" src="img/Schule.png"></a>
                             </li>
                         </ul>
@@ -161,7 +161,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Klasse" src="img/Klasse.png"></a>
                         <ul class="dropdown-menu" id="Klasse">
-                            <li>
+                            <li class="liste">
                                 <a href="#"><img alt="Klasse" src="img/Klasse.png"></a>
                             </li>
 
@@ -171,30 +171,30 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Fragen" src="img/Fragen.png"></a>
                         <ul class="dropdown-menu" id="Fragen">
-                            <li>
+                            <li class="liste">
                                 <a href="#"><img alt="Fragen" src="img/Fragen.png">BRAUCHST DU HILFE?</a>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SO GEHT'S!</a></li>
+                            <li class="liste"><a href="#">SO GEHT'S!</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">VIDEO-TUTORIALS</a></li>
+                            <li class="liste"><a href="#">VIDEO-TUTORIALS</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">HÄUFIG GESTELLTE FRAGEN</a></li>
+                            <li class="liste"><a href="#">HÄUFIG GESTELLTE FRAGEN</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">KONTAKT</a></li>
+                            <li class="liste"><a href="#">KONTAKT</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img alt="Exit" src="img/Exit.png"></a>
                         <ul class="dropdown-menu" id="Exit">
-                            <li>
+                            <li class="liste">
                                 <a href="#"><img alt="Exit" src="img/Exit.png">MÖCHTEST DU CHECK! VERLASSEN?</a>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">JA</a></li>
+                            <li class="liste"><a href="#">JA</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">NEIN</a></li>
+                            <li class="liste"><a href="#">NEIN</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -203,27 +203,6 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-</body>
-
-</html>
-<!-- /.container-fluid -->
-</nav>
-</body>
-
-</html>
-</ul>
-</li>
-</ul>
-</div>
-<!-- /.navbar-collapse -->
-</div>
-<!-- /.container-fluid -->
-</nav>
-</body>
-
-</html>
-<!-- /.container-fluid -->
-</nav>
 </body>
 
 </html>
