Changed checkstartseite.html check2.css, LoginButton hinzugefügt und Formatierung überarbeitet

--- a/CHECK_Startseite.html
+++ b/CHECK_Startseite.html
@@ -12,9 +12,8 @@
 </head>
 
 <body>
-    <img alt="pipapo" src="img/bilder.png">
-    <img alt="check" src="img/check.png">
-
+    <img src="img/Startseite.png" class="img-responsive" alt="Startseite">
+    <img src="img/check.png" class="img-responsive" alt="check">
     <div class="col-md-6">
         <form>
             <div class="form-group">
@@ -26,15 +25,14 @@
                 <input type="password" class="form-control" id="Passwort" placeholder="Passwort">
             </div>
             <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <!--<button type="submit" class="btn btn-default">LOS!</button>-->
-                    <button type="button" class="btn btn-primary" id="ButtonLos">LOS!</button>
-                </div>
+                <!--<button type="submit" class="btn btn-default">LOS!</button>-->
+                <input type="image" img alt="button" src="img/Button.png" id="Login">
             </div>
+            <img src="img/CheckImpressum.png" class="img-responsive" alt="checkstar">
+
         </form>
     </div>
-    </div>
-    </div>
+
 </body>
 
 </html>
