Changed: CHECK.html u check.css, Bilder und id-namen angepasst - Seda,Fritz,Vivian

--- a/CHECK.html
+++ b/CHECK.html
@@ -27,11 +27,11 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img alt="Kompetenzen" src="img/Kompetenzen.png">
+                            <img alt="chapterOverview" src="images-master/chapterOverview-inactive.png">
                         </a>
-                        <ul class="dropdown-menu" id="Kompetenzen">
+                        <ul class="dropdown-menu" id="chapterOverview">
                             <li class="liste">
-                                <a href="#"><img alt="Kompetenzen" src="img/Kompetenzen.png">CHECK! KOMPETENZENLISTE</a>
+                                <a href="#"><img alt="confirmation" src="images-master/confirmation.png">CHECK! KOMPETENZENLISTE</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">DAS BIN ICH</a></li>
@@ -68,12 +68,12 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img alt="Förderplan" src="img/Förderplan.png">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="educationalPlanPic">
+                            <img alt="educationalPlan" src="images-master/educationalPlan-inactive.png">
                         </a>
-                        <ul class="dropdown-menu" id="Forderplan">
+                        <ul class="dropdown-menu" id="educationalPlan">
                             <li class="liste">
-                                <a href="#"><img alt="Förderplan" src="img/Förderplan.png"></a>
+                                <a href="#"><img alt="educationalPlan" src="images-master/educationalPlan-inactive.png"></a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">MATHE ZR BIS 10</a></li>
@@ -84,12 +84,12 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img alt="Erreicht" src="img/Erreicht.png">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="achievedCompetencesPic">
+                            <img alt="achievedCompetences" src="images-master/achievedCompetences-inactive.png">
                         </a>
-                        <ul class="dropdown-menu" id="Erreicht">
+                        <ul class="dropdown-menu" id="achievedCompetences">
                             <li class="liste">
-                                <a href="#"><img alt="Erreicht" src="img/Erreicht.png">DAS KANN ICH!</a>
+                                <a href="#"><img alt="achievedCompetences" src="images-master/achievedCompetences-inactive.png">DAS KANN ICH!</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">ALLE KOMPETENZEN!</a></li>
@@ -131,13 +131,24 @@
 
                 </ul>
 
+
+
+                <ul class="nav navbar-nav" id="logo">
+                    <li>
+                        <img alt="logo" src="images-master/logo.png">
+                    </li>
+                </ul>
+
+
+
+
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img alt="Profil" src="img/Profil.png"></a>
-                        <ul class="dropdown-menu" id="Profil">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="superheroPic">
+                            <img alt="superhero" src="images-master/student/superhero-robin-inactive.png"></a>
+                        <ul class="dropdown-menu" id="superhero">
                             <li class="liste">
-                                <a href="#"><img alt="Profil" src="img/Profil.png"></a>
+                                <a href="#"><img alt="superhero" src="images-master/student/superhero-robin-inactive.png"></a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">MEIN PROFIL ÄNDERN</a></li>
@@ -148,31 +159,31 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img alt="Schule" src="img/Schule.png"></span>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="schoolPic">
+                            <img alt="school" src="images-master/school/school-inactive.png"></span>
                         </a>
-                        <ul class="dropdown-menu" id="Schule">
+                        <ul class="dropdown-menu" id="school">
                             <li class="liste">
-                                <a href="#"><img alt="Schule" src="img/Schule.png"></a>
+                                <a href="#"><img alt="school" src="images-master/school/school-inactive.png"></a>
                             </li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img alt="Klasse" src="img/Klasse.png"></a>
-                        <ul class="dropdown-menu" id="Klasse">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="studyGroupPic">
+                            <img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_inactive.png"></a>
+                        <ul class="dropdown-menu" id="studyGroup">
                             <li class="liste">
-                                <a href="#"><img alt="Klasse" src="img/Klasse.png"></a>
+                                <a href="#"><img alt="studyGroup" src="images-master/studyGroup/studyGroup_2b_inactive.png"></a>
                             </li>
 
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img alt="Fragen" src="img/Fragen.png"></a>
-                        <ul class="dropdown-menu" id="Fragen">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="helpPic">
+                            <img alt="help" src="images-master/help-inactive.png"></a>
+                        <ul class="dropdown-menu" id="help">
                             <li class="liste">
-                                <a href="#"><img alt="Fragen" src="img/Fragen.png">BRAUCHST DU HILFE?</a>
+                                <a href="#"><img alt="help" src="images-master/help-inactive.png">BRAUCHST DU HILFE?</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">SO GEHT'S!</a></li>
@@ -186,10 +197,10 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            <img alt="Exit" src="img/Exit.png"></a>
-                        <ul class="dropdown-menu" id="Exit">
+                            <img alt="logout" src="images-master/logout-iactive.png"></a>
+                        <ul class="dropdown-menu" id="logout">
                             <li class="liste">
-                                <a href="#"><img alt="Exit" src="img/Exit.png">MÖCHTEST DU CHECK! VERLASSEN?</a>
+                                <a href="#"><img alt="logout" src="images-master/logout-iactive.png">MÖCHTEST DU CHECK! VERLASSEN?</a>
                             </li>
                             <li role="separator" class="divider"></li>
                             <li class="liste"><a href="#">JA</a></li>
