Changed: check_startseite..footer und neue Grafiken hinzugefügt

--- a/CHECK_Startseite.html
+++ b/CHECK_Startseite.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-    <img src="img/Startseite.png" class="img-responsive" alt="Startseite">
-    <img src="img/check.png" class="img-responsive" alt="check">
+    <img src="img/CheckImg/login/header.png" class="img-responsive" id="header" alt="Startseite">
     <div class="col-md-6">
         <form>
             <div class="form-group">
@@ -28,8 +27,14 @@
                 <!--<button type="submit" class="btn btn-default">LOS!</button>-->
                 <input type="image" img alt="button" src="img/Button.png" id="Login">
             </div>
-            <img src="img/CheckImpressum.png" class="img-responsive" alt="checkstar">
-
+            <img src="img/CheckImg/login/footer.png" class="img-responsive" id="footer" alt="checkstar">
+            <p id="edition">edition 2016 dark night blue 1.0</p>
+            <div>
+                <p id="ersteZeile">CHECK! und CHECK! Lehrerzimmer sind Produkte des Raup &amp; Ritter Verlag und der OnWerk Softwareagentur Mannheim</p>
+            </div>
+            <div>
+                <p id="letzteZeile">www.raupundritter.com - Kontakt - Impressum - Preise - Hilfe </p>
+            </div>
         </form>
     </div>
 
